--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -74,52 +74,53 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      # Cache
-      - name: Set up cargo cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-          key: ${{ runner.os }}-cargo
-      - name: Set up target cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ matrix.dir }}/target/
-          key: ${{ runner.os }}-${{ matrix.bin }}-target-${{ hashFiles(format('{0}{1}', matrix.dir, '/Cargo.lock')) }}
-          restore-keys: ${{ runner.os }}-${{ matrix.bin }}-target-
+      # # Cache
+      # - name: Set up cargo cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: |
+      #       ~/.cargo/bin/
+      #       ~/.cargo/registry/index/
+      #       ~/.cargo/registry/cache/
+      #       ~/.cargo/git/db/
+      #     key: ${{ runner.os }}-cargo
+      # - name: Set up target cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ${{ matrix.dir }}/target/
+      #     key: ${{ runner.os }}-${{ matrix.bin }}-target-${{ hashFiles(format('{0}{1}', matrix.dir, '/Cargo.lock')) }}
+      #     restore-keys: ${{ runner.os }}-${{ matrix.bin }}-target-
 
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          target: ${{ matrix.target }}
-          override: true
+      # - uses: actions-rs/toolchain@v1
+      #   with:
+      #     profile: minimal
+      #     toolchain: stable
+      #     target: ${{ matrix.target }}
+      #     override: true
 
-      - name: Add cross compile Linux tools
-        if: ${{ matrix.target == 'aarch64-unknown-linux-gnu' }}
-        shell: bash
-        run: |
-          sudo apt update -y
-          sudo apt install -y build-essential g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross gcc-aarch64-linux-gnu
-          rustup target add aarch64-unknown-linux-gnu
+      # - name: Add cross compile Linux tools
+      #   if: ${{ matrix.target == 'aarch64-unknown-linux-gnu' }}
+      #   shell: bash
+      #   run: |
+      #     sudo apt update -y
+      #     sudo apt install -y build-essential g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross gcc-aarch64-linux-gnu
+      #     rustup target add aarch64-unknown-linux-gnu
 
-      - name: Install Protoc
-        uses: arduino/setup-protoc@v2
+      # - name: Install Protoc
+      #   uses: arduino/setup-protoc@v2
 
-      - name: Copy ABI
-        if: ${{ matrix.copy_abi }}
-        working-directory: ${{ matrix.dir }}
-        run: make copy_abi
+      # - name: Copy ABI
+      #   if: ${{ matrix.copy_abi }}
+      #   working-directory: ${{ matrix.dir }}
+      #   run: make copy_abi
 
-      - name: Build Binary ${{ matrix.name }}
+      - name: Build Binary ${{ matrix.dir }}/target/${{ matrix.target }}/release/${{ matrix.name }}
         working-directory: ${{ matrix.dir }}
         run: |
           # cargo build --release --target=${{ matrix.target }}
-          mkdir -p ${{ matrix.dir }}/target/${{ matrix.target }}/release/
-          touch ${{ matrix.dir }}/target/${{ matrix.target }}/release/${{ matrix.name }}
+          mkdir -p target/${{ matrix.target }}/release
+          touch target/${{ matrix.target }}/release/${{ matrix.name }}
+          ls -lA target/${{ matrix.target }}/release
 
       - name: Artifact ${{ matrix.name }}
         uses: actions/upload-artifact@v3
