--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -91,8 +91,8 @@ jobs:
           #   target: x86_64-pc-windows-msvc
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      # - name: Checkout repo
+      #   uses: actions/checkout@v4
 
       # # Cache
       # - name: Set up cargo cache
