--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,6 +28,7 @@ jobs:
   build:
     runs-on: "${{ matrix.os }}"
     strategy:
+      fail-fast: false
       matrix:
         name:
           - git-remote-gosh-darwin-arm64
