--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -96,65 +96,65 @@ jobs:
           #   target: x86_64-pc-windows-msvc
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      # - name: Checkout repo
+      #   uses: actions/checkout@v4
 
       - name: Set VERSION
         run: |
           echo "VERSION=$(cat version.json | jq -r .version)" >> $GITHUB_ENV
 
-      # Cache
-      - name: Set up cargo cache
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-          key: ${{ runner.os }}-cargo
-      - name: Set up target cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ matrix.dir }}/target/
-          key: ${{ runner.os }}-${{ matrix.bin }}-target-${{ hashFiles(format('{0}{1}', matrix.dir, '/Cargo.lock')) }}
-          restore-keys: ${{ runner.os }}-${{ matrix.bin }}-target-
+      # # Cache
+      # - name: Set up cargo cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: |
+      #       ~/.cargo/bin/
+      #       ~/.cargo/registry/index/
+      #       ~/.cargo/registry/cache/
+      #       ~/.cargo/git/db/
+      #     key: ${{ runner.os }}-cargo
+      # - name: Set up target cache
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ${{ matrix.dir }}/target/
+      #     key: ${{ runner.os }}-${{ matrix.bin }}-target-${{ hashFiles(format('{0}{1}', matrix.dir, '/Cargo.lock')) }}
+      #     restore-keys: ${{ runner.os }}-${{ matrix.bin }}-target-
 
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          target: ${{ matrix.target }}
-          override: true
+      # - uses: actions-rs/toolchain@v1
+      #   with:
+      #     profile: minimal
+      #     toolchain: stable
+      #     target: ${{ matrix.target }}
+      #     override: true
 
-      - name: Add cross compile Linux tools
-        if: ${{ matrix.target == 'aarch64-unknown-linux-gnu' }}
-        shell: bash
-        run: |
-          sudo apt update -y
-          sudo apt install -y build-essential g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross gcc-aarch64-linux-gnu
-          rustup target add aarch64-unknown-linux-gnu
+      # - name: Add cross compile Linux tools
+      #   if: ${{ matrix.target == 'aarch64-unknown-linux-gnu' }}
+      #   shell: bash
+      #   run: |
+      #     sudo apt update -y
+      #     sudo apt install -y build-essential g++-x86-64-linux-gnu libc6-dev-amd64-cross g++-aarch64-linux-gnu libc6-dev-arm64-cross gcc-aarch64-linux-gnu
+      #     rustup target add aarch64-unknown-linux-gnu
 
-      - name: Install Protoc
-        uses: arduino/setup-protoc@v2
-        # workaround rate-limit
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Install Protoc
+      #   uses: arduino/setup-protoc@v2
+      #   # workaround rate-limit
+      #   with:
+      #     repo-token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Copy ABI
-        if: ${{ matrix.copy_abi }}
-        working-directory: ${{ matrix.dir }}
-        run: make copy_abi
+      # - name: Copy ABI
+      #   if: ${{ matrix.copy_abi }}
+      #   working-directory: ${{ matrix.dir }}
+      #   run: make copy_abi
 
       - name: Build Binary ${{ matrix.dir }}/target/${{ matrix.target }}/release/${{ matrix.bin }}
         working-directory: ${{ matrix.dir }}
-        if: ${{ true }}
+        if: ${{ !true }}
         run: |
           cargo build --release --target=${{ matrix.target }}
           ls -lA target/${{ matrix.target }}/release
 
       - name: FAKE Build Binary ${{ matrix.dir }}/target/${{ matrix.target }}/release/${{ matrix.bin }}
-        if: ${{ false }}
+        if: ${{ !false }}
         run: |
           mkdir -p ${{ matrix.dir }}/target/${{ matrix.target }}/release
           touch ${{ matrix.dir }}/target/${{ matrix.target }}/release/${{ matrix.bin }}
@@ -213,4 +213,4 @@ jobs:
           prerelease: true
           files: |
             ${{ matrix.name }}.tar.gz
-          tag_name: rc-${{ github.env.VERSION || 'no-version' }}-${{ github.ref_name }}-${{ github.run_number }}
+          tag_name: rc-${{ env.VERSION || 'no-version' }}-${{ github.ref_name }}-${{ github.run_number }}
