--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -100,8 +100,9 @@ jobs:
       #   uses: actions/checkout@v4
 
       - name: Set VERSION
+        id: version
         run: |
-          echo "VERSION=$(cat version.json | jq -r .version)" >> $GITHUB_ENV
+          echo "VERSION=$(cat version.json | jq -r .version)" >> "$GITHUB_OUTPUT"
 
       # # Cache
       # - name: Set up cargo cache
@@ -213,4 +214,4 @@ jobs:
           prerelease: true
           files: |
             ${{ matrix.name }}.tar.gz
-          tag_name: rc-${{ env.VERSION || 'no-version' }}-${{ github.ref_name }}-${{ github.run_number }}
+          tag_name: rc-${{ job.build.version.outputs.VERSION || 'no-version' }}-${{ github.ref_name }}-${{ github.run_number }}
