--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -27,6 +27,8 @@ env:
   CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
   ## TODO: why?
   # BINDGEN_EXTRA_CLANG_ARGS": '--sysroot /usr/arm-linux-gnueabi'
+  RUSTFLAGS: -C target-feature=+crt-static
+  OPENSSL_NO_VENDOR: 1
 
 jobs:
   build:
@@ -41,39 +43,39 @@ jobs:
           - git-remote-gosh-linux-amd64
         bin:
           - git-remote-gosh
-          - git-remote-gosh_v1_0_0
-          - git-remote-gosh_v2_0_0
-          - git-remote-gosh_v3_0_0
-          - git-remote-gosh_v4_0_0
-          - git-remote-gosh_v5_0_0
-          - git-remote-gosh_v5_1_0
-          - git-remote-gosh_v6_0_0
+          # - git-remote-gosh_v1_0_0
+          # - git-remote-gosh_v2_0_0
+          # - git-remote-gosh_v3_0_0
+          # - git-remote-gosh_v4_0_0
+          # - git-remote-gosh_v5_0_0
+          # - git-remote-gosh_v5_1_0
+          # - git-remote-gosh_v6_0_0
           - git-remote-gosh_v6_1_0
         include:
           ## bin
           - bin: git-remote-gosh
             dir: gosh-dispatcher
-          - bin: git-remote-gosh_v1_0_0
-            dir: v1_x/git-remote-gosh
-            copy_abi: true
-          - bin: git-remote-gosh_v2_0_0
-            dir: v2_x/git-remote-gosh
-            copy_abi: true
-          - bin: git-remote-gosh_v3_0_0
-            dir: v3_x/git-remote-gosh
-            copy_abi: true
-          - bin: git-remote-gosh_v4_0_0
-            dir: v4_x/git-remote-gosh
-            copy_abi: true
-          - bin: git-remote-gosh_v5_0_0
-            dir: v5_x/v5.0.0/git-remote-gosh
-            copy_abi: true
-          - bin: git-remote-gosh_v5_1_0
-            dir: v5_x/v5.1.0/git-remote-gosh
-            copy_abi: true
-          - bin: git-remote-gosh_v6_0_0
-            dir: v6_x/v6.0.0/git-remote-gosh
-            copy_abi: true
+          # - bin: git-remote-gosh_v1_0_0
+          #   dir: v1_x/git-remote-gosh
+          #   copy_abi: true
+          # - bin: git-remote-gosh_v2_0_0
+          #   dir: v2_x/git-remote-gosh
+          #   copy_abi: true
+          # - bin: git-remote-gosh_v3_0_0
+          #   dir: v3_x/git-remote-gosh
+          #   copy_abi: true
+          # - bin: git-remote-gosh_v4_0_0
+          #   dir: v4_x/git-remote-gosh
+          #   copy_abi: true
+          # - bin: git-remote-gosh_v5_0_0
+          #   dir: v5_x/v5.0.0/git-remote-gosh
+          #   copy_abi: true
+          # - bin: git-remote-gosh_v5_1_0
+          #   dir: v5_x/v5.1.0/git-remote-gosh
+          #   copy_abi: true
+          # - bin: git-remote-gosh_v6_0_0
+          #   dir: v6_x/v6.0.0/git-remote-gosh
+          #   copy_abi: true
           - bin: git-remote-gosh_v6_1_0
             dir: v6_x/v6.1.0/git-remote-gosh
             copy_abi: true
