--- a/.github/workflows/prerelease.yaml
+++ b/.github/workflows/prerelease.yaml
@@ -14,8 +14,6 @@ env:
   CARGO_INCREMENTAL: 0  # important for cache size too
   CARGO_NET_RETRY: 10
   RUST_BACKTRACE: full
-  ## warnings -> errors
-  # RUSTFLAGS: -D warnings
   RUSTUP_MAX_RETRIES: 10
   CARGO_PROFILE_RELEASE_CODEGEN_UNITS: 1
   CARGO_PROFILE_RELEASE_LTO: true
@@ -25,9 +23,8 @@ env:
   CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: aarch64-linux-gnu-gcc
   CC_aarch64_unknown_linux_gnu: aarch64-linux-gnu-gcc
   CXX_aarch64_unknown_linux_gnu: aarch64-linux-gnu-g++
-  ## TODO: why?
-  # BINDGEN_EXTRA_CLANG_ARGS": '--sysroot /usr/arm-linux-gnueabi'
   RUSTFLAGS: -C target-feature=+crt-static
+  OPENSSL_NO_VENDOR: 1
 
 jobs:
   build:
@@ -42,10 +39,10 @@ jobs:
           - git-remote-gosh-linux-amd64
         bin:
           # - git-remote-gosh
-          # - git-remote-gosh_v1_0_0
+          - git-remote-gosh_v1_0_0
           # - git-remote-gosh_v2_0_0
           # - git-remote-gosh_v3_0_0
-          - git-remote-gosh_v4_0_0
+          # - git-remote-gosh_v4_0_0
           # - git-remote-gosh_v5_0_0
           # - git-remote-gosh_v5_1_0
           # - git-remote-gosh_v6_0_0
@@ -54,18 +51,18 @@ jobs:
           ## bin
           # - bin: git-remote-gosh
           #   dir: gosh-dispatcher
-          # - bin: git-remote-gosh_v1_0_0
-          #   dir: v1_x/git-remote-gosh
-          #   copy_abi: true
+          - bin: git-remote-gosh_v1_0_0
+            dir: v1_x/git-remote-gosh
+            copy_abi: true
           # - bin: git-remote-gosh_v2_0_0
           #   dir: v2_x/git-remote-gosh
           #   copy_abi: true
           # - bin: git-remote-gosh_v3_0_0
           #   dir: v3_x/git-remote-gosh
           #   copy_abi: true
-          - bin: git-remote-gosh_v4_0_0
-            dir: v4_x/git-remote-gosh
-            copy_abi: true
+          # - bin: git-remote-gosh_v4_0_0
+          #   dir: v4_x/git-remote-gosh
+          #   copy_abi: true
           # - bin: git-remote-gosh_v5_0_0
           #   dir: v5_x/v5.0.0/git-remote-gosh
           #   copy_abi: true
@@ -176,8 +173,8 @@ jobs:
     strategy:
       matrix:
         name:
-          - git-remote-gosh-darwin-arm64
-          - git-remote-gosh-darwin-amd64
+          # - git-remote-gosh-darwin-arm64
+          # - git-remote-gosh-darwin-amd64
           - git-remote-gosh-linux-arm64
           - git-remote-gosh-linux-amd64
 
