--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,52 +18,52 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - release_name: git-remote-gosh-linux-arm64
-            os: ubuntu-20.04
-            target: aarch64-unknown-linux-musl
-            bin: git-remote-gosh_v6_1_0
+          # - release_name: git-remote-gosh-linux-arm64
+          #   os: ubuntu-20.04
+          #   target: aarch64-unknown-linux-musl
+          #   bin: git-remote-gosh_v6_1_0
           - release_name: git-remote-gosh-linux-amd64
             os: ubuntu-20.04
             target: x86_64-unknown-linux-musl
             bin: git-remote-gosh_v6_1_0
-          - release_name: git-remote-gosh-windows-amd64
-            os: windows-latest
-            target: x86_64-pc-windows-msvc
-            bin: git-remote-gosh_v6_1_0.exe
-          - release_name: git-remote-gosh-darwin-arm64
-            os: macos-latest
-            target: aarch64-apple-darwin
-            bin: git-remote-gosh_v6_1_0
-          - release_name: git-remote-gosh-darwin-amd64
-            os: macos-latest
-            target: x86_64-apple-darwin
-            bin: git-remote-gosh_v6_1_0
+          # - release_name: git-remote-gosh-windows-amd64
+          #   os: windows-latest
+          #   target: x86_64-pc-windows-msvc
+          #   bin: git-remote-gosh_v6_1_0.exe
+          # - release_name: git-remote-gosh-darwin-arm64
+          #   os: macos-latest
+          #   target: aarch64-apple-darwin
+          #   bin: git-remote-gosh_v6_1_0
+          # - release_name: git-remote-gosh-darwin-amd64
+          #   os: macos-latest
+          #   target: x86_64-apple-darwin
+          #   bin: git-remote-gosh_v6_1_0
         toolchain:
           - stable
     steps:
-      # - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # - name: Copy ABI
-      #   working-directory: v6_x/v6.1.0/git-remote-gosh
-      #   run: |
-      #     make copy_abi
-
-      # - name: Build binary
-      #   uses: houseabsolute/actions-rust-cross@v0
-      #   with:
-      #     command: build
-      #     working-directory: v6_x/v6.1.0/git-remote-gosh
-      #     target: ${{ matrix.platform.target }}
-      #     toolchain: ${{ matrix.toolchain }}
-      #     args: --release
-      #     strip: true
-
-      - name: Fake build
-        if: startsWith(matrix.platform.os, 'windows') != true
+      - name: Copy ABI
+        working-directory: v6_x/v6.1.0/git-remote-gosh
         run: |
-          mkdir -p v6_x/v6.1.0/git-remote-gosh/target/${{ matrix.platform.target }}/release
-          touch v6_x/v6.1.0/git-remote-gosh/target/${{ matrix.platform.target }}/release/${{ matrix.platform.bin }}
-          ls -lA v6_x/v6.1.0/git-remote-gosh/target/${{ matrix.platform.target }}/release
+          make copy_abi
+
+      - name: Build binary
+        uses: houseabsolute/actions-rust-cross@v0
+        with:
+          command: build
+          working-directory: v6_x/v6.1.0/git-remote-gosh
+          target: ${{ matrix.platform.target }}
+          toolchain: ${{ matrix.toolchain }}
+          args: --release
+          strip: true
+
+      # - name: Fake build
+      #   if: startsWith(matrix.platform.os, 'windows') != true
+      #   run: |
+      #     mkdir -p v6_x/v6.1.0/git-remote-gosh/target/${{ matrix.platform.target }}/release
+      #     touch v6_x/v6.1.0/git-remote-gosh/target/${{ matrix.platform.target }}/release/${{ matrix.platform.bin }}
+      #     ls -lA v6_x/v6.1.0/git-remote-gosh/target/${{ matrix.platform.target }}/release
 
       - name: Prepare release (not windows)
         if: startsWith(matrix.platform.os, 'windows') != true
